- Changed the response of the dummy PO execute method to the new format.
